// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnsSettings "en" locale renders correctly 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c0.rovna-ui-drawer-header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 18px 24px;
  border-bottom: none;
}

.c7.rovna-ui-drawer-body {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px 24px;
  overflow: auto;
}

.c7.rovna-ui-drawer-body::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c7.rovna-ui-drawer-body::-webkit-scrollbar-track {
  background: #f4f4f5ff;
  border-radius: 16px;
}

.c7.rovna-ui-drawer-body::-webkit-scrollbar-thumb {
  background-color: #dddee1ff;
  border-radius: 16px;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: #343A4AFF;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: #343A4AFF;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c5.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c5.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c4 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  margin: 0;
  border-color: transparent;
  background: transparent;
  color: #646A74FF;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: color;
  transition-property: color;
}

.c4:hover {
  color: #343A4AFF;
}

.c11.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c1.c1.c1 {
  line-height: 24px;
  font-weight: 600;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 6px;
  padding: 2px 12px;
  color: #343A4AFF;
  background: #FFFFFFFF;
  border-color: #D2D3D7FF;
  border-width: 1px;
  border-style: solid;
}

.c3:focus-visible {
  outline: #1D243666 solid 2px;
}

.c3:hover:not(:disabled) {
  cursor: pointer;
  color: #343A4AFF;
  background: #1D24360D;
  border-color: #686E78FF;
}

.c3:active:not(:disabled) {
  color: #343A4AFF;
  background: #1D24361A;
  border-color: #686E78FF;
}

.c3:disabled {
  cursor: not-allowed;
  color: #686E78FF;
  background-color: #1D24360D;
  border-color: transparent;
}

.c3 .anticon,
.c3 .rovna-ui-icon-root {
  font-size: 16px;
}

.c3:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c3:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c3:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

.c9 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.c10 {
  width: 100%;
}

.c15 {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c13 {
  cursor: pointer;
}

<div
    class="rovna-ui-drawer rovna-ui-drawer-right css-dev-only-do-not-override-u64svk rovna-ui-drawer-open"
    tabindex="-1"
  >
    <div
      class="rovna-ui-drawer-mask"
    />
    <div
      aria-hidden="true"
      data-sentinel="start"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
    <div
      class="rovna-ui-drawer-content-wrapper"
      data-testid="rovna-ui-columns-settings-drawer"
      style="width: 500px;"
    >
      <div
        aria-modal="true"
        class="rovna-ui-drawer-content"
        role="dialog"
        style="display: flex; flex-direction: column; max-height: 100vh;"
      >
        <div
          class="c0 rovna-ui-drawer-header"
        >
          <h5
            class="rovna-ui-typography c1 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
            data-testid="rovna-ui-title"
            style="flex: 1;"
          >
            Table settings
          </h5>
          <div
            class="c2"
          >
            <button
              class="c3 rovna-ui-button rovna-ui-button-variant-secondary rovna-ui-button-preset-default rovna-ui-button-size-small"
              data-testid="rovna-ui-button"
            >
              Reset to default
            </button>
            <button
              aria-label="Закрыть"
              class="c4 c5"
            >
              <span
                class="c6 rovna-ui-icon-root anticon"
                data-testid="rovna-ui-close-icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="c7 rovna-ui-drawer-body"
        >
          <div
            class="c8"
            data-testid="rovna-ui-columns-settings-list"
          >
            <div
              class="c2"
              data-testid="rovna-ui-columns-settings-column-setting-root"
            >
              <label
                class="c9 c10"
              >
                <button
                  aria-checked="true"
                  aria-label="Column 1"
                  class="rovna-ui-switch css-dev-only-do-not-override-u64svk rovna-ui-switch-checked"
                  data-testid="rovna-ui-columns-settings-column-setting-toggle"
                  role="switch"
                  type="button"
                >
                  <div
                    class="rovna-ui-switch-handle"
                  />
                  <span
                    class="rovna-ui-switch-inner"
                  >
                    <span
                      class="rovna-ui-switch-inner-checked"
                    />
                    <span
                      class="rovna-ui-switch-inner-unchecked"
                    />
                  </span>
                </button>
                <span
                  class="rovna-ui-typography c11 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
                  data-testid="rovna-ui-text"
                >
                  <strong>
                    Column 1
                  </strong>
                </span>
              </label>
              <span
                class="c12 rovna-ui-icon-root anticon c13"
                data-testid="rovna-ui-columns-settings-column-setting-pin"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7 3C7 3.55228 7.44772 4 8 4L8 10.6972L6.16795 13.4453C5.96338 13.7522 5.94431 14.1467 6.11833 14.4719C6.29235 14.797 6.63121 15 7 15H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V15H17C17.3688 15 17.7077 14.797 17.8817 14.4719C18.0557 14.1467 18.0366 13.7522 17.8321 13.4453L16 10.6972L16 4C16.5523 4 17 3.55228 17 3C17 2.44772 16.5523 2 16 2H15H9H8C7.44772 2 7 2.44772 7 3ZM10 11V4H14V11C14 11.1974 14.0584 11.3904 14.168 11.5547L15.1315 13H8.86852L9.83205 11.5547C9.94156 11.3904 10 11.1974 10 11Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                aria-describedby="DndDescribedBy-1"
                aria-disabled="false"
                aria-roledescription="sortable"
                data-testid="rovna-ui-columns-settings-column-setting-drag"
                role="button"
                tabindex="0"
              >
                <span
                  class="c14 rovna-ui-icon-root anticon c15"
                  data-testid="rovna-ui-drag-indicator-icon"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9 8C10.1046 8 11 7.10457 11 6C11 4.89543 10.1046 4 9 4C7.89543 4 7 4.89543 7 6C7 7.10457 7.89543 8 9 8ZM9 14C10.1046 14 11 13.1046 11 12C11 10.8954 10.1046 10 9 10C7.89543 10 7 10.8954 7 12C7 13.1046 7.89543 14 9 14ZM11 18C11 19.1046 10.1046 20 9 20C7.89543 20 7 19.1046 7 18C7 16.8954 7.89543 16 9 16C10.1046 16 11 16.8954 11 18ZM15 8C16.1046 8 17 7.10457 17 6C17 4.89543 16.1046 4 15 4C13.8954 4 13 4.89543 13 6C13 7.10457 13.8954 8 15 8ZM17 12C17 13.1046 16.1046 14 15 14C13.8954 14 13 13.1046 13 12C13 10.8954 13.8954 10 15 10C16.1046 10 17 10.8954 17 12ZM15 20C16.1046 20 17 19.1046 17 18C17 16.8954 16.1046 16 15 16C13.8954 16 13 16.8954 13 18C13 19.1046 13.8954 20 15 20Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="c2"
              data-testid="rovna-ui-columns-settings-column-setting-root"
            >
              <label
                class="c9 c10"
              >
                <button
                  aria-checked="true"
                  aria-label="Column 2"
                  class="rovna-ui-switch css-dev-only-do-not-override-u64svk rovna-ui-switch-checked"
                  data-testid="rovna-ui-columns-settings-column-setting-toggle"
                  role="switch"
                  type="button"
                >
                  <div
                    class="rovna-ui-switch-handle"
                  />
                  <span
                    class="rovna-ui-switch-inner"
                  >
                    <span
                      class="rovna-ui-switch-inner-checked"
                    />
                    <span
                      class="rovna-ui-switch-inner-unchecked"
                    />
                  </span>
                </button>
                <span
                  class="rovna-ui-typography c11 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
                  data-testid="rovna-ui-text"
                >
                  <strong>
                    Column 2
                  </strong>
                </span>
              </label>
              <span
                class="c12 rovna-ui-icon-root anticon c13"
                data-testid="rovna-ui-columns-settings-column-setting-pin"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7 3C7 3.55228 7.44772 4 8 4L8 10.6972L6.16795 13.4453C5.96338 13.7522 5.94431 14.1467 6.11833 14.4719C6.29235 14.797 6.63121 15 7 15H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V15H17C17.3688 15 17.7077 14.797 17.8817 14.4719C18.0557 14.1467 18.0366 13.7522 17.8321 13.4453L16 10.6972L16 4C16.5523 4 17 3.55228 17 3C17 2.44772 16.5523 2 16 2H15H9H8C7.44772 2 7 2.44772 7 3ZM10 11V4H14V11C14 11.1974 14.0584 11.3904 14.168 11.5547L15.1315 13H8.86852L9.83205 11.5547C9.94156 11.3904 10 11.1974 10 11Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                aria-describedby="DndDescribedBy-1"
                aria-disabled="false"
                aria-roledescription="sortable"
                data-testid="rovna-ui-columns-settings-column-setting-drag"
                role="button"
                tabindex="0"
              >
                <span
                  class="c14 rovna-ui-icon-root anticon c15"
                  data-testid="rovna-ui-drag-indicator-icon"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9 8C10.1046 8 11 7.10457 11 6C11 4.89543 10.1046 4 9 4C7.89543 4 7 4.89543 7 6C7 7.10457 7.89543 8 9 8ZM9 14C10.1046 14 11 13.1046 11 12C11 10.8954 10.1046 10 9 10C7.89543 10 7 10.8954 7 12C7 13.1046 7.89543 14 9 14ZM11 18C11 19.1046 10.1046 20 9 20C7.89543 20 7 19.1046 7 18C7 16.8954 7.89543 16 9 16C10.1046 16 11 16.8954 11 18ZM15 8C16.1046 8 17 7.10457 17 6C17 4.89543 16.1046 4 15 4C13.8954 4 13 4.89543 13 6C13 7.10457 13.8954 8 15 8ZM17 12C17 13.1046 16.1046 14 15 14C13.8954 14 13 13.1046 13 12C13 10.8954 13.8954 10 15 10C16.1046 10 17 10.8954 17 12ZM15 20C16.1046 20 17 19.1046 17 18C17 16.8954 16.1046 16 15 16C13.8954 16 13 16.8954 13 18C13 19.1046 13.8954 20 15 20Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="c2"
              data-testid="rovna-ui-columns-settings-column-setting-root"
            >
              <label
                class="c9 c10"
              >
                <button
                  aria-checked="true"
                  aria-label="Column 3"
                  class="rovna-ui-switch css-dev-only-do-not-override-u64svk rovna-ui-switch-checked"
                  data-testid="rovna-ui-columns-settings-column-setting-toggle"
                  role="switch"
                  type="button"
                >
                  <div
                    class="rovna-ui-switch-handle"
                  />
                  <span
                    class="rovna-ui-switch-inner"
                  >
                    <span
                      class="rovna-ui-switch-inner-checked"
                    />
                    <span
                      class="rovna-ui-switch-inner-unchecked"
                    />
                  </span>
                </button>
                <span
                  class="rovna-ui-typography c11 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
                  data-testid="rovna-ui-text"
                >
                  <strong>
                    Column 3
                  </strong>
                </span>
              </label>
              <span
                class="c12 rovna-ui-icon-root anticon c13"
                data-testid="rovna-ui-columns-settings-column-setting-pin"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7 3C7 3.55228 7.44772 4 8 4L8 10.6972L6.16795 13.4453C5.96338 13.7522 5.94431 14.1467 6.11833 14.4719C6.29235 14.797 6.63121 15 7 15H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V15H17C17.3688 15 17.7077 14.797 17.8817 14.4719C18.0557 14.1467 18.0366 13.7522 17.8321 13.4453L16 10.6972L16 4C16.5523 4 17 3.55228 17 3C17 2.44772 16.5523 2 16 2H15H9H8C7.44772 2 7 2.44772 7 3ZM10 11V4H14V11C14 11.1974 14.0584 11.3904 14.168 11.5547L15.1315 13H8.86852L9.83205 11.5547C9.94156 11.3904 10 11.1974 10 11Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                aria-describedby="DndDescribedBy-1"
                aria-disabled="false"
                aria-roledescription="sortable"
                data-testid="rovna-ui-columns-settings-column-setting-drag"
                role="button"
                tabindex="0"
              >
                <span
                  class="c14 rovna-ui-icon-root anticon c15"
                  data-testid="rovna-ui-drag-indicator-icon"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9 8C10.1046 8 11 7.10457 11 6C11 4.89543 10.1046 4 9 4C7.89543 4 7 4.89543 7 6C7 7.10457 7.89543 8 9 8ZM9 14C10.1046 14 11 13.1046 11 12C11 10.8954 10.1046 10 9 10C7.89543 10 7 10.8954 7 12C7 13.1046 7.89543 14 9 14ZM11 18C11 19.1046 10.1046 20 9 20C7.89543 20 7 19.1046 7 18C7 16.8954 7.89543 16 9 16C10.1046 16 11 16.8954 11 18ZM15 8C16.1046 8 17 7.10457 17 6C17 4.89543 16.1046 4 15 4C13.8954 4 13 4.89543 13 6C13 7.10457 13.8954 8 15 8ZM17 12C17 13.1046 16.1046 14 15 14C13.8954 14 13 13.1046 13 12C13 10.8954 13.8954 10 15 10C16.1046 10 17 10.8954 17 12ZM15 20C16.1046 20 17 19.1046 17 18C17 16.8954 16.1046 16 15 16C13.8954 16 13 16.8954 13 18C13 19.1046 13.8954 20 15 20Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-sentinel="end"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
  </div>
  <div
    id="DndDescribedBy-1"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</DocumentFragment>
`;

exports[`ColumnsSettings "ru" locale renders correctly 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c0.rovna-ui-drawer-header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 18px 24px;
  border-bottom: none;
}

.c7.rovna-ui-drawer-body {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px 24px;
  overflow: auto;
}

.c7.rovna-ui-drawer-body::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c7.rovna-ui-drawer-body::-webkit-scrollbar-track {
  background: #f4f4f5ff;
  border-radius: 16px;
}

.c7.rovna-ui-drawer-body::-webkit-scrollbar-thumb {
  background-color: #dddee1ff;
  border-radius: 16px;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: #343A4AFF;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: #343A4AFF;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c5.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c5.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c4 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  margin: 0;
  border-color: transparent;
  background: transparent;
  color: #646A74FF;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: color;
  transition-property: color;
}

.c4:hover {
  color: #343A4AFF;
}

.c11.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
}

.c1.c1.c1 {
  line-height: 24px;
  font-weight: 600;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 6px;
  padding: 2px 12px;
  color: #343A4AFF;
  background: #FFFFFFFF;
  border-color: #D2D3D7FF;
  border-width: 1px;
  border-style: solid;
}

.c3:focus-visible {
  outline: #1D243666 solid 2px;
}

.c3:hover:not(:disabled) {
  cursor: pointer;
  color: #343A4AFF;
  background: #1D24360D;
  border-color: #686E78FF;
}

.c3:active:not(:disabled) {
  color: #343A4AFF;
  background: #1D24361A;
  border-color: #686E78FF;
}

.c3:disabled {
  cursor: not-allowed;
  color: #686E78FF;
  background-color: #1D24360D;
  border-color: transparent;
}

.c3 .anticon,
.c3 .rovna-ui-icon-root {
  font-size: 16px;
}

.c3:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c3:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c3:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c3:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

.c9 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.c10 {
  width: 100%;
}

.c15 {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c13 {
  cursor: pointer;
}

<div
    class="rovna-ui-drawer rovna-ui-drawer-right css-dev-only-do-not-override-u64svk rovna-ui-drawer-open"
    tabindex="-1"
  >
    <div
      class="rovna-ui-drawer-mask"
    />
    <div
      aria-hidden="true"
      data-sentinel="start"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
    <div
      class="rovna-ui-drawer-content-wrapper"
      data-testid="rovna-ui-columns-settings-drawer"
      style="width: 500px;"
    >
      <div
        aria-modal="true"
        class="rovna-ui-drawer-content"
        role="dialog"
        style="display: flex; flex-direction: column; max-height: 100vh;"
      >
        <div
          class="c0 rovna-ui-drawer-header"
        >
          <h5
            class="rovna-ui-typography c1 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
            data-testid="rovna-ui-title"
            style="flex: 1;"
          >
            Настройка таблицы
          </h5>
          <div
            class="c2"
          >
            <button
              class="c3 rovna-ui-button rovna-ui-button-variant-secondary rovna-ui-button-preset-default rovna-ui-button-size-small"
              data-testid="rovna-ui-button"
            >
              Сбросить всё
            </button>
            <button
              aria-label="Закрыть"
              class="c4 c5"
            >
              <span
                class="c6 rovna-ui-icon-root anticon"
                data-testid="rovna-ui-close-icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="c7 rovna-ui-drawer-body"
        >
          <div
            class="c8"
            data-testid="rovna-ui-columns-settings-list"
          >
            <div
              class="c2"
              data-testid="rovna-ui-columns-settings-column-setting-root"
            >
              <label
                class="c9 c10"
              >
                <button
                  aria-checked="true"
                  aria-label="Column 1"
                  class="rovna-ui-switch css-dev-only-do-not-override-u64svk rovna-ui-switch-checked"
                  data-testid="rovna-ui-columns-settings-column-setting-toggle"
                  role="switch"
                  type="button"
                >
                  <div
                    class="rovna-ui-switch-handle"
                  />
                  <span
                    class="rovna-ui-switch-inner"
                  >
                    <span
                      class="rovna-ui-switch-inner-checked"
                    />
                    <span
                      class="rovna-ui-switch-inner-unchecked"
                    />
                  </span>
                </button>
                <span
                  class="rovna-ui-typography c11 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
                  data-testid="rovna-ui-text"
                >
                  <strong>
                    Column 1
                  </strong>
                </span>
              </label>
              <span
                class="c12 rovna-ui-icon-root anticon c13"
                data-testid="rovna-ui-columns-settings-column-setting-pin"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7 3C7 3.55228 7.44772 4 8 4L8 10.6972L6.16795 13.4453C5.96338 13.7522 5.94431 14.1467 6.11833 14.4719C6.29235 14.797 6.63121 15 7 15H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V15H17C17.3688 15 17.7077 14.797 17.8817 14.4719C18.0557 14.1467 18.0366 13.7522 17.8321 13.4453L16 10.6972L16 4C16.5523 4 17 3.55228 17 3C17 2.44772 16.5523 2 16 2H15H9H8C7.44772 2 7 2.44772 7 3ZM10 11V4H14V11C14 11.1974 14.0584 11.3904 14.168 11.5547L15.1315 13H8.86852L9.83205 11.5547C9.94156 11.3904 10 11.1974 10 11Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-roledescription="sortable"
                data-testid="rovna-ui-columns-settings-column-setting-drag"
                role="button"
                tabindex="0"
              >
                <span
                  class="c14 rovna-ui-icon-root anticon c15"
                  data-testid="rovna-ui-drag-indicator-icon"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9 8C10.1046 8 11 7.10457 11 6C11 4.89543 10.1046 4 9 4C7.89543 4 7 4.89543 7 6C7 7.10457 7.89543 8 9 8ZM9 14C10.1046 14 11 13.1046 11 12C11 10.8954 10.1046 10 9 10C7.89543 10 7 10.8954 7 12C7 13.1046 7.89543 14 9 14ZM11 18C11 19.1046 10.1046 20 9 20C7.89543 20 7 19.1046 7 18C7 16.8954 7.89543 16 9 16C10.1046 16 11 16.8954 11 18ZM15 8C16.1046 8 17 7.10457 17 6C17 4.89543 16.1046 4 15 4C13.8954 4 13 4.89543 13 6C13 7.10457 13.8954 8 15 8ZM17 12C17 13.1046 16.1046 14 15 14C13.8954 14 13 13.1046 13 12C13 10.8954 13.8954 10 15 10C16.1046 10 17 10.8954 17 12ZM15 20C16.1046 20 17 19.1046 17 18C17 16.8954 16.1046 16 15 16C13.8954 16 13 16.8954 13 18C13 19.1046 13.8954 20 15 20Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="c2"
              data-testid="rovna-ui-columns-settings-column-setting-root"
            >
              <label
                class="c9 c10"
              >
                <button
                  aria-checked="true"
                  aria-label="Column 2"
                  class="rovna-ui-switch css-dev-only-do-not-override-u64svk rovna-ui-switch-checked"
                  data-testid="rovna-ui-columns-settings-column-setting-toggle"
                  role="switch"
                  type="button"
                >
                  <div
                    class="rovna-ui-switch-handle"
                  />
                  <span
                    class="rovna-ui-switch-inner"
                  >
                    <span
                      class="rovna-ui-switch-inner-checked"
                    />
                    <span
                      class="rovna-ui-switch-inner-unchecked"
                    />
                  </span>
                </button>
                <span
                  class="rovna-ui-typography c11 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
                  data-testid="rovna-ui-text"
                >
                  <strong>
                    Column 2
                  </strong>
                </span>
              </label>
              <span
                class="c12 rovna-ui-icon-root anticon c13"
                data-testid="rovna-ui-columns-settings-column-setting-pin"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7 3C7 3.55228 7.44772 4 8 4L8 10.6972L6.16795 13.4453C5.96338 13.7522 5.94431 14.1467 6.11833 14.4719C6.29235 14.797 6.63121 15 7 15H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V15H17C17.3688 15 17.7077 14.797 17.8817 14.4719C18.0557 14.1467 18.0366 13.7522 17.8321 13.4453L16 10.6972L16 4C16.5523 4 17 3.55228 17 3C17 2.44772 16.5523 2 16 2H15H9H8C7.44772 2 7 2.44772 7 3ZM10 11V4H14V11C14 11.1974 14.0584 11.3904 14.168 11.5547L15.1315 13H8.86852L9.83205 11.5547C9.94156 11.3904 10 11.1974 10 11Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-roledescription="sortable"
                data-testid="rovna-ui-columns-settings-column-setting-drag"
                role="button"
                tabindex="0"
              >
                <span
                  class="c14 rovna-ui-icon-root anticon c15"
                  data-testid="rovna-ui-drag-indicator-icon"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9 8C10.1046 8 11 7.10457 11 6C11 4.89543 10.1046 4 9 4C7.89543 4 7 4.89543 7 6C7 7.10457 7.89543 8 9 8ZM9 14C10.1046 14 11 13.1046 11 12C11 10.8954 10.1046 10 9 10C7.89543 10 7 10.8954 7 12C7 13.1046 7.89543 14 9 14ZM11 18C11 19.1046 10.1046 20 9 20C7.89543 20 7 19.1046 7 18C7 16.8954 7.89543 16 9 16C10.1046 16 11 16.8954 11 18ZM15 8C16.1046 8 17 7.10457 17 6C17 4.89543 16.1046 4 15 4C13.8954 4 13 4.89543 13 6C13 7.10457 13.8954 8 15 8ZM17 12C17 13.1046 16.1046 14 15 14C13.8954 14 13 13.1046 13 12C13 10.8954 13.8954 10 15 10C16.1046 10 17 10.8954 17 12ZM15 20C16.1046 20 17 19.1046 17 18C17 16.8954 16.1046 16 15 16C13.8954 16 13 16.8954 13 18C13 19.1046 13.8954 20 15 20Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="c2"
              data-testid="rovna-ui-columns-settings-column-setting-root"
            >
              <label
                class="c9 c10"
              >
                <button
                  aria-checked="true"
                  aria-label="Column 3"
                  class="rovna-ui-switch css-dev-only-do-not-override-u64svk rovna-ui-switch-checked"
                  data-testid="rovna-ui-columns-settings-column-setting-toggle"
                  role="switch"
                  type="button"
                >
                  <div
                    class="rovna-ui-switch-handle"
                  />
                  <span
                    class="rovna-ui-switch-inner"
                  >
                    <span
                      class="rovna-ui-switch-inner-checked"
                    />
                    <span
                      class="rovna-ui-switch-inner-unchecked"
                    />
                  </span>
                </button>
                <span
                  class="rovna-ui-typography c11 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
                  data-testid="rovna-ui-text"
                >
                  <strong>
                    Column 3
                  </strong>
                </span>
              </label>
              <span
                class="c12 rovna-ui-icon-root anticon c13"
                data-testid="rovna-ui-columns-settings-column-setting-pin"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7 3C7 3.55228 7.44772 4 8 4L8 10.6972L6.16795 13.4453C5.96338 13.7522 5.94431 14.1467 6.11833 14.4719C6.29235 14.797 6.63121 15 7 15H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V15H17C17.3688 15 17.7077 14.797 17.8817 14.4719C18.0557 14.1467 18.0366 13.7522 17.8321 13.4453L16 10.6972L16 4C16.5523 4 17 3.55228 17 3C17 2.44772 16.5523 2 16 2H15H9H8C7.44772 2 7 2.44772 7 3ZM10 11V4H14V11C14 11.1974 14.0584 11.3904 14.168 11.5547L15.1315 13H8.86852L9.83205 11.5547C9.94156 11.3904 10 11.1974 10 11Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                aria-describedby="DndDescribedBy-0"
                aria-disabled="false"
                aria-roledescription="sortable"
                data-testid="rovna-ui-columns-settings-column-setting-drag"
                role="button"
                tabindex="0"
              >
                <span
                  class="c14 rovna-ui-icon-root anticon c15"
                  data-testid="rovna-ui-drag-indicator-icon"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9 8C10.1046 8 11 7.10457 11 6C11 4.89543 10.1046 4 9 4C7.89543 4 7 4.89543 7 6C7 7.10457 7.89543 8 9 8ZM9 14C10.1046 14 11 13.1046 11 12C11 10.8954 10.1046 10 9 10C7.89543 10 7 10.8954 7 12C7 13.1046 7.89543 14 9 14ZM11 18C11 19.1046 10.1046 20 9 20C7.89543 20 7 19.1046 7 18C7 16.8954 7.89543 16 9 16C10.1046 16 11 16.8954 11 18ZM15 8C16.1046 8 17 7.10457 17 6C17 4.89543 16.1046 4 15 4C13.8954 4 13 4.89543 13 6C13 7.10457 13.8954 8 15 8ZM17 12C17 13.1046 16.1046 14 15 14C13.8954 14 13 13.1046 13 12C13 10.8954 13.8954 10 15 10C16.1046 10 17 10.8954 17 12ZM15 20C16.1046 20 17 19.1046 17 18C17 16.8954 16.1046 16 15 16C13.8954 16 13 16.8954 13 18C13 19.1046 13.8954 20 15 20Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-sentinel="end"
      style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
      tabindex="0"
    />
  </div>
  <div
    id="DndDescribedBy-0"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</DocumentFragment>
`;
